ejemplo1/webgatos-aws-lb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgatos-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webgatos
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: webgatos
    spec:
      containers:
      - name: webgatos
        image: codeurjc/webgatos
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webgatos-service
  namespace: default
  annotations: {}
  labels:
    app: webgatos
spec:
  ports:
  - name: webgatos-port
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: webgatos
  type: LoadBalancer
