ejemplo1/webgatos-minikube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgatos-service
  labels:
    app: webgatos
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: webgatos-port
  selector:
    app: webgatos
  type: NodePort
