ejemplo1/webgatos-aws-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgatos-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webgatos
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: webgatos
    spec:
      containers:
      - name: webgatos
        image: codeurjc/webgatos
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: webgatos-service
  labels:
    app: webgatos
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: webgatos-port
  selector:
    app: webgatos
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: webgatos-ingress
    labels:
      app: webgatos
spec:
  rules:
  - host: webgatos.k8s.openvidu.io
    http:
      paths:
      - backend:
          serviceName: webgatos-service
          servicePort: 80
